Fix white borders in dark mode

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -54,8 +54,14 @@
   padding: 3vw 2vw;
 }
 
+html,
+body,
+app-root,
 .app-frame {
   height: 100%;
+  overflow-y: auto;
+  margin: 0;
+  overscroll-behavior-x: none;
 }
 
 input {
